--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+.like-btn {
+ color: #0000ff !important;
+ }
+
+.unlike-btn {
+ color: #e54747 !important;
+ }
