--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -11,12 +11,32 @@
     <% books.each do |book| %>
       <tr>
         <td><%= link_to(book.user) do %>
-          <%= image_tag book.user.get_profile_image, size:'50x50' %>
+          <%= image_tag book.user.get_profile_image(100,100) %>
           <% end %>
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-      </tr>
+
+
+    <td>
+    <% if book.favorited?(current_user) %>
+      <%= link_to book_favorites_path(book), method: :delete do %>
+        <i class="fas fa-heart"></i>
+        <%= book.favorites.count %>
+      <% end %>
+    <% else %>
+      <%= link_to book_favorites_path(book), method: :post do %>
+        <i class="far fa-heart"></i>
+        <%= book.favorites.count %>
+      <% end %>
     <% end %>
+    </td>
+
+    <td>
+      <p>コメント数：<%= book.book_comments.count %></p>
+    </td>
+
+    </tr>
+<% end %>
   </tbody>
 </table>
