--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -12,18 +12,58 @@
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+            <%= image_tag @book.user.get_profile_image(100,100) %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+
+          <td>
+          <% if @book.favorited?(current_user) %>
+            <%= link_to book_favorites_path(@book), method: :delete do %>
+            <i class="far fa-heart like-btn" ></i>
+            <%= @book.favorites.count %>
+          <% end %>
+          <% else %>
+            <%= link_to book_favorites_path(@book), method: :post do %>
+             <i class="fas fa-heart unlike-btn"></i>
+            <%= @book.favorites.count %>
+          <% end %>
+          <% end %>
+
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
+
+          <td>コメント数：<%= @book.book_comments.count %></p>
         </tr>
+
       </table>
+          <div>
+            <% @book.book_comments.each do |book_comment| %>
+              <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
+            <%= link_to user_path(book_comment.id) do %>
+            <%= book_comment.user.name %>
+            <% end %>
+
+
+              <%= book_comment.comment %>
+
+              <% if book_comment.user == current_user %>
+              <td><%= link_to 'Destroy', @book, method: :delete, class: "btn btn-sm btn-danger destroy_book_#{@book_comment.id}"%></td>
+              <% end %>
+            <% end %>
+          </div>
+
+
+          <div>
+            <%= form_with model: [@book, @book_comment] do |f| %>
+              <%= f.text_area :comment, size: "60x5", placeholder: "" %> </br>
+              <%= f.submit "送信する" %>
+            <% end %>
+          </div>
     </div>
   </div>
 </div>
