--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -43,13 +43,11 @@
       </table>
           <div>
             <% @book.book_comments.each do |book_comment| %>
-              <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
-            <%= link_to user_path(book_comment.id) do %>
+            <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
+            <%= link_to user_path(book_comment.user.id) do %>
             <%= book_comment.user.name %>
             <% end %>
-
-
-              <%= book_comment.comment %>
+            <%= book_comment.comment %>
 
               <% if book_comment.user == current_user %>
               <td><%= link_to 'Destroy', @book, method: :delete, class: "btn btn-sm btn-danger destroy_book_#{@book_comment.id}"%></td>
