--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -6,11 +6,21 @@
       <th colspan="3"></th>
     </tr>
   </thead>
+
+
+
   <tbody>
     <% users.each do |user| %>
       <tr>
         <td><%= image_tag user.get_profile_image(100,100) %></td>
         <td><%= user.name %></td>
+        <td>
+          <% if current_user.following?(user) %>
+            <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+          <% else %>
+            <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user, class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
