--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,6 +8,31 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th><%= link_to user_followings_path(user) do %>
+        <%= user.followings.count %>
+        <% end %>
+    </th>
+  </tr>
+  <tr>
+     <th>followers</th>
+     <th>
+       <%= link_to user_followers_path(user) do %>
+       <%= user.followers.count %>
+       <% end %>
+     </th>
+  </tr>
+  <tr>
+  <% unless user == current_user %>
+  <% if current_user.following?(user) %>
+  <th><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn-sm btn-info" %></th>
+  <% else %>
+  <th><%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn-sm btn-success" %></th>
+  <% end %>
+  <% end %>
+  </tr>
+
 </table>
 
 <div class='row'>
