--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
       <%= render 'layouts/header' %>
 
     <main>
+      <%= render 'searches/search' %>
         <p id="notice"><%= notice %></p>
         <%= yield %>
     </main>
