--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -10,8 +10,7 @@
   <tbody>
     <% books.each do |book| %>
       <tr>
-        <td>
-          <%= link_to(book.user) do %>
+        <td><%= link_to(book.user) do %>
           <%= image_tag book.user.get_profile_image(100,100) %>
           <% end %>
         </td>
@@ -22,7 +21,7 @@
     <td>
     <% if book.favorited?(current_user) %>
       <%= link_to book_favorites_path(book), method: :delete do %>
-        <i class="fas fa-heart" style="color: red;"></i>
+        <i class="fas fa-heart" style="color: red; "></i>
         <%= book.favorites.count %>
       <% end %>
     <% else %>
