--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -2,44 +2,15 @@
 
 <table class="table table-hover table-inverse">
   <% if @range == "User" %>
-  <thead>
-    <tr>
-      <th></th>
-      <th>name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <%= link_to user_path(user) do %>
-          <td><%= image_tag user.get_profile_image(100,100) %></td>
-          <td><%= user.name %></td>
-          <% end %>
-        </tr>
-      <% end %>
-    </tbody>
+
+
+
+    <%= render 'users/index', users: @users%>
+
   <% else %>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-    <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td>
-            <%= link_to(book.user) do %>
-            <%= image_tag book.user.get_profile_image(100,100) %>
-            <% end %>
-          </td>
-          <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
-          <td><%= book.body %></td>
-          </tr>
-      <% end %>
+
+   <%= render 'books/index', books: @books %>
+
     </tbody>
   <% end %>
 </table>
