--- a/app/views/book_comments/_comment.html.erb
+++ b/app/views/book_comments/_comment.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <% book.book_comments.each do |book_comment| %>
+  <% book_comments.each do |book_comment| %>
   <p><%= image_tag book_comment.user.get_profile_image(100,100) %></p>
   <%= link_to user_path(book_comment.user.id) do %>
   <%= book_comment.user.name %>
@@ -7,7 +7,7 @@
   <%= book_comment.comment %>
 
   <% if book_comment.user == current_user %>
-  <td><%= link_to 'Destroy', book, method: :delete, class: "btn btn-sm btn-danger destroy_book_#{book_comment.id}"%></td>
+  <td><%= link_to 'Destroy', book_book_comment_path(book_comment.book.id, book_comment.id), method: :delete, remote: true, class: "btn btn-sm btn-danger destroy_book_#{book_comment.id}"%></td>
   <% end %>
   <% end %>
 </div>
