--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -18,18 +18,9 @@
         <td><%= book.body %></td>
 
 
-    <td>
-    <% if book.favorited?(current_user) %>
-      <%= link_to book_favorites_path(book), method: :delete do %>
-        <i class="fas fa-heart" style="color: red; "></i>
-        <%= book.favorites.count %>
-      <% end %>
-    <% else %>
-      <%= link_to book_favorites_path(book), method: :post do %>
-        <i class="far fa-heart"></i>
-        <%= book.favorites.count %>
-      <% end %>
-    <% end %>
+    <td id="favorite_<%= book.id %>">
+
+    <%= render 'favorites/favorites', book: book %>
     </td>
 
     <td>
