--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,9 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
+        <td id="favorite_<%= @book.id %>">
           <%= render 'favorites/favorites', book: @book %>
+        </td>
 
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
@@ -30,9 +32,14 @@
         </tr>
 
       </table>
+        <div id = "book_comments_<% @book_id %>">
+          <%= render 'book_comments/comment', book_comments: @book.book_comments %>
+        </div>
 
-          <%= render 'book_comments/comment', book: @book %>
+
+
           <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
+
 
 
     </div>
