--- a/app/views/favorites/_favorites.html.erb
+++ b/app/views/favorites/_favorites.html.erb
@@ -1,13 +1,12 @@
-<td>
-        <% if book.favorited?(current_user) %>
-          <%= link_to book_favorites_path(book), method: :delete do %>
-            <i class="far fa-heart like-btn " style="color: red;" ></i>
-            <%= book.favorites.count %>
-          <% end %>
-        <% else %>
-          <%= link_to book_favorites_path(book), method: :post do %>
-            <i class="fas fa-heart unlike-btn" ></i>
-            <%= book.favorites.count %>
-          <% end %>
-        <% end %>
+<% if book.favorited?(current_user) %>
+  <%= link_to book_favorites_path(book), method: :delete, remote: true do %>
+    <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
+      <span class = "text-danger" ><%= book.favorites.count %></span>
+  <% end %>
+  <% else %>
+    <%= link_to book_favorites_path(book), method: :post, remote: true do %>
+      <i class="fas fa-heart" aria-hidden="true"></i>
+        <%= book.favorites.count %>
+  <% end %>
+<% end %>
 
