--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,3 +1,5 @@
  $("#book_comments_<% @book_id %>").html("<%= j(render 'book_comments/comment', book_comments: @book.book_comments) %>");
+ $(".comments-count").html("<%= j(render 'book_comments/comment-count', book: @book) %>");
+
 
 $('#comment_area').val('')
