--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,1 +1,2 @@
- $("#book_comments_<% @book_id %>").html("<%= j(render 'book_comments/comment', book_comments: @book_comment.book.book_comments) %>");
+ $("#book_comments_<% @book_id %>").html("<%= j(render 'book_comments/comment', book_comments: @book.book_comments) %>");
+ $(".comments-count").html("<%= j(render 'book_comments/comment-count', book: @book) %>");
