--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -23,8 +23,8 @@
     <%= render 'favorites/favorites', book: book %>
     </td>
 
-    <td>
-      <p>コメント数：<%= book.book_comments.count %></p>
+    <td class= "comments-count">
+     <%= render 'book_comments/comment-count', book: book %>
     </td>
 
     </tr>
